--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,16 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.6.9</version>
         </dependency>
-
     </dependencies>
-<!-- Deploy to Nexus --> <distributionManagement>    <repository>       <id>deploymentRepo</id>       <name>Nexus Repository</name>       <url>http://localhost:8081/repository/maven-releases/</url>    </repository> </distributionManagement>
+
+    <!-- Deploy to Nexus -->
+    <distributionManagement>
+       <repository>
+          <id>deploymentRepo</id>
+          <name>Nexus Repository</name>
+          <url>http://localhost:8081/repository/maven-releases/</url>
+       </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
@@ -66,5 +73,5 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
+
