--- a/prometheus-mysql.yml
+++ b/prometheus-mysql.yml
@@ -6,10 +6,12 @@ services:
       - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+
   mysql:
-    image: mysql:latest
+    image: mysql:8.0  # Use MySQL 8.0 for ARM64 compatibility
     environment:
       MYSQL_ROOT_PASSWORD: example
       MYSQL_DATABASE: exampledb
     ports:
       - "3306:3306"
+
