--- a/prometheus-mysql.yml
+++ b/prometheus-mysql.yml
@@ -9,7 +9,8 @@ services:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
 
   mysql:
-    image: arm64v8/mysql
+    platform: linux/x86_64
+    image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: example
       MYSQL_DATABASE: exampledb
