--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     image: mysql:8.0
     container_name: mysql_db
     environment:
-      MYSQL_ROOT_PASSWORD: 0000
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: kaddem_db
       MYSQL_USER: root
-      MYSQL_PASSWORD: 0000
+      MYSQL_PASSWORD: root
     ports:
       - "3306:3306"
     volumes:
@@ -26,7 +26,7 @@ services:
     environment:
       - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/kaddem_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
       - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=0000
+      - SPRING_DATASOURCE_PASSWORD=root
       - SERVER_SERVLET_CONTEXT_PATH=/kaddem
       - SERVER_PORT=8089
     depends_on:
