--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-#Server configuration
+# Server configuration
 server.servlet.context-path=${SERVER_SERVLET_CONTEXT_PATH:/kaddem}
 server.port=${SERVER_PORT:8089}
+
 ### DATABASE ###
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/kaddem_db?&createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://db:3306/kaddem_db?&createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
+
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
